# System-Monitor

./: Cargo.toml  LICENSE  README.md  gen_metrics.py  metrics_data.json
OpenHardwareMonitor/: OpenHardwareMonitor.config
src/: main.rs
