[package]
name = "monitor_sistema"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
netstat = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.34"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
wmi = "0.12"
chrono = "0.4"